# cpp-usergroup-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json  msbuild.sln  msbuild.vcxproj  msbuild.vcxproj.filters  vcpkg.json  vsghouseviewer.cpp
scene/: house.mtl
